tests/transpiler/x/java/typed_let.java
// Generated by Mochi transpiler
public class Main {
    public static void main(String[] args) {
        int y;
        System.out.println(y);
    }
}
